--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- Add Your Title -->
-  <title> My ortfolio </title>
+  <title> My portfolio </title>
 
   <!-- All Meta Tags -->
   <meta charset="utf-8">
