--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="info">
                   <h2>
                     <p></p>
-                    Robin Borja
+                    Robin C. Borja
                   </h2>
                   <h4>
                     New graduate with a passion for networking, ready to contribute to a team and learn on the job.
