--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header id="header">
         <div id="logo">
           <h6>
-            Robin Borja
+            Robin C. Borja
           </h6>
          
         </div>
