--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     Robin C. Borja
                   </h2>
                   <h4>
-                    New graduate with a passion for networking, ready to contribute to a team and learn on the job.
+                    "I am a graduating student at Laguna State Polytechnic University, pursuing a Bachelor of Science in Information Technology with a major in Network Administration."
                   </h4>
                   
                     
