--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     Robin C. Borja
                   </h2>
                   <h4>
-                    "I am a graduating student at Laguna State Polytechnic University, pursuing a B.S. in Information Technology with a focus on Network Administration."
+                    "I am a graduating student at Laguna State Polytechnic University, pursuing a B.S. in Information Technology with a focus on Network Administrator."
                   </h4>
                   
                     
